fixed sending mail scripts and others

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
   <p>
     <p id="return"/>
   </p>
+  <script>
+    getUserAgent();
+    function getUserAgent() {
+      var userAgent = window.navigator.userAgent;
+      alert(userAgent);
+    }
+  </script>
 </body>
 
 <script>
